--- a/hs-web/public/index.html
+++ b/hs-web/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Xenon mod/application for creating videos in response to audio"
+            content="Application for creating videos in response to audio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon1024.png"/>
     <!--
