--- a/hs-web/public/index.html
+++ b/hs-web/public/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="Application for creating videos in response to audio"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon1024.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-large.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
